modifying auth, for swipe gestures (still in progress)

--- a/res/values/strings_is.arb
+++ b/res/values/strings_is.arb
@@ -1,6 +1,6 @@
 {
   "app_subtitle": "The event app",
   "vapp": "Vapp",
-  "or_use": "Or use",
-  "sign_in": "SIGN IN"
+  "or_use": "Eða Notaðu",
+  "sign_in": "SKRÁ INN"
 }
